--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
