--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "g": "^2.0.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
@@ -17,6 +18,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "serve": "^14.2.0",
+    "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
