--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-secure-storage": "^1.3.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "serve": "^14.2.0",
