--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "file-saver": "^2.0.5",
     "g": "^2.0.1",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
